--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,18 +3,18 @@
 // @import './_typography.scss';
 @import './_globals.scss';
 
-@import './components/header.scss';
-@import './components/footer.scss';
-@import './components/logo.scss';
-@import './components/hamburger.scss';
-@import './components/main-nav.scss';
-@import './components/button.scss';
-@import './components/headings-text.scss';
+// @import './components/header.scss';
+// @import './components/footer.scss';
+// @import './components/logo.scss';
+// @import './components/hamburger.scss';
+// @import './components/main-nav.scss';
+// @import './components/button.scss';
+// @import './components/headings-text.scss';
 
-@import './blocks/left-text-right-image.scss';
-@import './blocks/logos-slider.scss';
-@import './blocks/two-headings-text.scss';
-@import './blocks/cards-with-icons.scss';
-@import './blocks/video-file.scss';
-@import './blocks/reviews-slider.scss';
-@import './blocks/contact-info-contact-form.scss';
+// @import './blocks/left-text-right-image.scss';
+// @import './blocks/logos-slider.scss';
+// @import './blocks/two-headings-text.scss';
+// @import './blocks/cards-with-icons.scss';
+// @import './blocks/video-file.scss';
+// @import './blocks/reviews-slider.scss';
+// @import './blocks/contact-info-contact-form.scss';
