--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,7 +3,7 @@
 // @import './_typography.scss';
 @import './_globals.scss';
 
-// @import './components/header.scss';
+@import './components/heading-text.scss';
 @import './structure/footer.scss';
 // @import './components/logo.scss';
 // @import './components/hamburger.scss';
