--- a/src/sass/components/heading-text.scss
+++ b/src/sass/components/heading-text.scss
@@ -11,6 +11,11 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     margin-bottom: 0.2rem;
+
+    @include media-up(xxl) {
+      font-size: 4.8rem;
+      line-height: 7.2rem;
+    }
   }
 
   &__text {
@@ -20,5 +25,10 @@
     font-size: 1.4rem;
     line-height: 2.5rem;
     color: $pinkwhite;
+
+    @include media-up(xxl) {
+      font-size: 2.4rem;
+      line-height: 3.6rem;
+    }
   }
 }
