track mobile ready

--- a/src/sass/components/track.scss
+++ b/src/sass/components/track.scss
@@ -1,1 +1,153 @@
-.track {}
+.track {
+  &-name {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    color: $white;
+  }
+
+  &-description {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2.1rem;
+    color: $white;
+    margin-top: 2.7rem;
+  }
+
+  &-box {
+    display: flex;
+    margin-top: 3.3rem;
+    margin-bottom: 3rem;
+
+    &__player {
+      background: $whiteAlpha1;
+      box-shadow: 0px -226px 90px $blackAlpha1, 0px -127px 76px $blackAlpha2, 0px -56px 56px $blackAlpha3, 0px -14px 31px $blackAlpha1, 0px 0px 0px $blackAlpha1;
+      border-radius: 4.4rem;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      width: 22.8rem;
+      height: 5.4rem;
+      padding: 0 2.4rem 0 2.4rem;
+      position: relative;
+
+      @include media-up(sm) {
+        width: auto;
+        flex-grow: 1;
+        justify-content: space-between;
+
+      }
+
+      .track-box__button {
+        display: inline-block;
+        width: 1.7rem;
+        height: 1.8rem;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-image: url('data:image/svg+xml,<svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.0757 8.7813C21.136 9.96803 21.0948 12.9509 19.003 14.0416L4.47466 21.6173C2.46076 22.6674 0.0381114 21.1645 0.0696208 18.8845L0.178925 10.9754L0.288229 3.06624C0.319738 0.78625 2.78237 -0.603775 4.76596 0.538789L19.0757 8.7813Z" fill="url(%23paint0_linear_444_297)" fill-opacity="0.6"/><defs><linearGradient id="paint0_linear_444_297" x1="12.1775" y1="-1.11726" x2="11.6552" y2="12.8001" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient></defs></svg>');
+        cursor: pointer;
+        margin-right: 2.2rem;
+        position: relative;
+        top: -2px;
+
+        &--pause {
+          background-image: url('data:image/svg+xml,<svg viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="13" width="7" height="22" rx="3.5" fill="url(%23paint0_linear_444_391)" fill-opacity="0.6"/><rect width="7" height="22" rx="3.5" fill="url(%23paint1_linear_444_391)" fill-opacity="0.6"/><defs><linearGradient id="paint0_linear_444_391" x1="13.1644" y1="11" x2="16.9217" y2="11.0157" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient><linearGradient id="paint1_linear_444_391" x1="0.164365" y1="11" x2="3.92171" y2="11.0157" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient></defs></svg>');
+        }
+      }
+
+      .track-box__track {
+        background-color: $gray1;
+        width: 9.11rem;
+        height: 0.1rem;
+        position: relative;
+        margin-right: 1.1rem;
+
+        @include media-up(sm) {
+          width: auto;
+          flex-grow: 1;
+        }
+
+        .track-box__pointer {
+          background: linear-gradient(90.75deg, $pink2 2.97%, $purple2 55.95%);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          position: absolute;
+          top: 0;
+          left: 0;
+          display: inline-block;
+          width: 1rem;
+          height: 1rem;
+          border-radius: 50%;
+          top: -5px;
+          left: 18px;
+        }
+      }
+
+      .track-box__time {
+        font-family: 'Inter', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+        color: $gray1;
+        position: relative;
+        top: -0.1rem;
+      }
+    }
+
+    &__icons {
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      align-items: center;
+      position: relative;
+
+      .track-box__icon {
+        position: relative;
+
+        &--download {
+          background-image: url('data:image/svg+xml,<svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 29H30M16 18.875V2M16 18.875L23 12.125M16 18.875L9 12.125" stroke="url(%23paint0_linear_444_380)" stroke-opacity="0.6" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/><defs><linearGradient id="paint0_linear_444_380" x1="2.65746" y1="15.5" x2="17.6843" y2="15.7046" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient></defs></svg>');
+          background-repeat: no-repeat;
+          background-position: center center;
+          display: inline-block;
+          width: 3.2rem;
+          height: 3.1rem;
+          transform: scale(0.75);
+          top: -0.2rem;
+          margin-left: 0.5rem;
+        }
+
+        &--share {
+          background-image: url('data:image/svg+xml,<svg width="26" height="29" viewBox="0 0 26 29" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M21.6667 20.498C20.5689 20.498 19.5867 20.9347 18.8356 21.619L8.53667 15.5773C8.60889 15.2425 8.66667 14.9076 8.66667 14.5582C8.66667 14.2088 8.60889 13.874 8.53667 13.5392L18.72 7.55572C19.5 8.28364 20.5256 8.73494 21.6667 8.73494C24.0644 8.73494 26 6.78414 26 4.36747C26 1.9508 24.0644 0 21.6667 0C19.2689 0 17.3333 1.9508 17.3333 4.36747C17.3333 4.71687 17.3911 5.05171 17.4633 5.38655L7.28 11.37C6.5 10.6421 5.47444 10.1908 4.33333 10.1908C1.93556 10.1908 0 12.1416 0 14.5582C0 16.9749 1.93556 18.9257 4.33333 18.9257C5.47444 18.9257 6.5 18.4744 7.28 17.7465L17.5644 23.8027C17.4922 24.1084 17.4489 24.4287 17.4489 24.749C17.4489 27.0929 19.3411 29 21.6667 29C23.9922 29 25.8844 27.0929 25.8844 24.749C25.8844 22.4051 23.9922 20.498 21.6667 20.498Z" fill="url(%23paint0_linear_444_383)" fill-opacity="0.6"/><defs><linearGradient id="paint0_linear_444_383" x1="0.610497" y1="14.5" x2="14.5647" y2="14.6643" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient></defs></svg>');
+          background-repeat: no-repeat;
+          background-position: center center;
+          display: inline-block;
+          width: 2.6rem;
+          height: 2.9rem;
+          transform: scale(0.73);
+          top: -0.2rem;
+          margin-left: 0.9rem;
+        }
+      }
+    }
+  }
+
+  &__terms {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 3rem;
+    gap: 1.3rem 2.2rem;
+
+    .track__term {
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 2.1rem;
+      color: $white;
+    }
+  }
+}
