--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 @import './_globals.scss';
 
 @import './components/heading-text.scss';
+@import './components/track.scss';
 @import './structure/footer.scss';
 // @import './components/logo.scss';
 // @import './components/hamburger.scss';
