--- a/src/sass/components/track.scss
+++ b/src/sass/components/track.scss
@@ -1,4 +1,8 @@
 .track {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
   &-name {
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -6,6 +10,10 @@
     font-size: 1.8rem;
     line-height: 2.2rem;
     color: $white;
+
+    @include media-up(xl) {
+      display: none;
+    }
   }
 
   &-description {
@@ -16,12 +24,22 @@
     line-height: 2.1rem;
     color: $white;
     margin-top: 2.7rem;
+
+    @include media-up(xxl) {
+      order: 2;
+      width: 50%;
+    }
   }
 
   &-box {
     display: flex;
     margin-top: 3.3rem;
     margin-bottom: 3rem;
+
+    @include media-up(xxl) {
+      order: 1;
+      width: 100%;
+    }
 
     &__player {
       background: $whiteAlpha1;
@@ -39,7 +57,31 @@
         width: auto;
         flex-grow: 1;
         justify-content: space-between;
+      }
 
+      @include media-up(xl) {
+        height: 8.8rem;
+        padding: 0 5.1rem 0 5rem;
+      }
+
+      &-name {
+        display: none;
+
+        @include media-up(xl) {
+          position: relative;
+          top: -0.2rem;
+          font-family: 'Inter', sans-serif;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 1.6rem;
+          line-height: 1.9rem;
+          background: linear-gradient(90.75deg, rgba(255, 0, 168, 0.6) 2.97%, rgba(189, 0, 255, 0.6) 55.95%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          display: inline-block;
+          max-width: 19rem;
+          margin-right: 1.7rem;
+        }
       }
 
       .track-box__button {
@@ -53,6 +95,10 @@
         margin-right: 2.2rem;
         position: relative;
         top: -2px;
+
+        @include media-up(xl) {
+          margin-right: 3.4rem;
+        }
 
         &--pause {
           background-image: url('data:image/svg+xml,<svg viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="13" width="7" height="22" rx="3.5" fill="url(%23paint0_linear_444_391)" fill-opacity="0.6"/><rect width="7" height="22" rx="3.5" fill="url(%23paint1_linear_444_391)" fill-opacity="0.6"/><defs><linearGradient id="paint0_linear_444_391" x1="13.1644" y1="11" x2="16.9217" y2="11.0157" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient><linearGradient id="paint1_linear_444_391" x1="0.164365" y1="11" x2="3.92171" y2="11.0157" gradientUnits="userSpaceOnUse"><stop stop-color="%23FF00A8"/><stop offset="1" stop-color="%23BD00FF"/></linearGradient></defs></svg>');
@@ -71,6 +117,12 @@
           flex-grow: 1;
         }
 
+        @include media-up(xl) {
+          height: 0.4rem;
+          border-radius: 0.2rem;
+          margin-right: 1.8rem;
+        }
+
         .track-box__pointer {
           background: linear-gradient(90.75deg, $pink2 2.97%, $purple2 55.95%);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -83,6 +135,16 @@
           border-radius: 50%;
           top: -5px;
           left: 18px;
+
+          @include media-up(xxl) {
+            background: $gray1;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            width: 1.9rem;
+            height: 1.8rem;
+            top: -0.7rem;
+            left: 6.7rem;
+          }
+
         }
       }
 
@@ -95,6 +157,12 @@
         color: $gray1;
         position: relative;
         top: -0.1rem;
+
+        @include media-up(xxl) {
+          font-size: 1.8rem;
+          line-height: 2.2rem;
+          top: 0.1rem;
+        }
       }
     }
 
@@ -135,11 +203,16 @@
     }
   }
 
-  &__terms {
+  &-terms {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 3rem;
     gap: 1.3rem 2.2rem;
+
+    @include media-up(xxl) {
+      order: 3;
+      width: 50%;
+    }
 
     .track__term {
       font-family: 'Poppins', sans-serif;
