--- a/src/sass/blocks/list-of-tracks.scss
+++ b/src/sass/blocks/list-of-tracks.scss
@@ -1,4 +1,13 @@
 .list-of-tracks {
-  background-color: rgba(255, 255, 255, 0.3);
-  border: 3px solid yellow;
+  background-color: bisque;
+
+  .col {
+    background-color: aqua;
+
+    &--arrow {
+      width: 20%;
+
+      background-color: red;
+    }
+  }
 }
