--- a/src/sass/components/heading-text.scss
+++ b/src/sass/components/heading-text.scss
@@ -1,3 +1,5 @@
+@use '../variables' as variables;
+
 .heading-text {
   &__heading {
     font-family: 'Poppins', sans-serif;
@@ -5,14 +7,14 @@
     font-weight: 600;
     font-size: 4rem;
     line-height: 6rem;
-    background: linear-gradient(90.75deg, $pink1 2.97%, $purple1 55.95%);
+    background: linear-gradient(90.75deg, variables.$pink1 2.97%, variables.$purple1 55.95%);
     opacity: 0.6;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     margin-bottom: 0.2rem;
 
-    @include media-up(xxl) {
+    @include variables.media-up(xxl) {
       font-size: 4.8rem;
       line-height: 7.2rem;
     }
@@ -24,9 +26,9 @@
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 2.5rem;
-    color: $pinkwhite;
+    color: variables.$pinkwhite;
 
-    @include media-up(xxl) {
+    @include variables.media-up(xxl) {
       font-size: 2.4rem;
       line-height: 3.6rem;
     }
