--- a/src/sass/components/track.scss
+++ b/src/sass/components/track.scss
@@ -201,6 +201,12 @@
           top: -0.2rem;
           margin-left: 0.9rem;
         }
+
+        .track-box__link {
+          width: 100%;
+          height: 100%;
+          display: inline-block;
+        }
       }
     }
   }
