list-of-tracks already ready

--- a/src/blocks/list-of-tracks/list-of-tracks.scss
+++ b/src/blocks/list-of-tracks/list-of-tracks.scss
@@ -18,5 +18,13 @@
         }
       }
     }
+
+    .col {
+      .track {
+        &:not(:last-of-type) {
+          margin-bottom: 7.2rem;
+        }
+      }
+    }
   }
 }
