--- a/src/sass/components/heading-text.scss
+++ b/src/sass/components/heading-text.scss
@@ -1,18 +1,24 @@
 @use '../variables' as variables;
 
 .heading-text {
+  margin-bottom: 4.6rem;
+
+  @include media-up(xxl) {
+    margin-bottom: 4.3rem;
+  }
+
   &__heading {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 4rem;
-    line-height: 6rem;
+    line-height: 4rem;
     background: linear-gradient(90.75deg, variables.$pink1 2.97%, variables.$purple1 55.95%);
     opacity: 0.6;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    margin-bottom: 0.2rem;
+    margin-bottom: 0;
 
     @include variables.media-up(xxl) {
       font-size: 4.8rem;
@@ -27,10 +33,13 @@
     font-size: 1.4rem;
     line-height: 2.5rem;
     color: variables.$pinkwhite;
+    margin-top: 0.8rem;
 
     @include variables.media-up(xxl) {
       font-size: 2.4rem;
       line-height: 3.6rem;
+      margin-top: 0.1rem;
+      margin-left: 0.2rem;
     }
   }
 }
