--- a/src/sass/components/track.scss
+++ b/src/sass/components/track.scss
@@ -194,7 +194,7 @@
           top: -0.2rem;
           margin-left: 0.5rem;
 
-          @include media-up(xxl) {
+          @include variables.media-up(xxl) {
             transform: scale(1);
             top: -0.1rem;
             margin-left: 2.4rem;
@@ -212,7 +212,7 @@
           top: -0.2rem;
           margin-left: 0.9rem;
 
-          @include media-up(xxl) {
+          @include variables.media-up(xxl) {
             transform: scale(1.03);
             top: 0.1rem;
             margin-left: 3.2rem;
