basic header structure

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,7 @@ $blackAlpha1: rgba(0, 0, 0, 0.01);
 $blackAlpha2: rgba(0, 0, 0, 0.05);
 $blackAlpha3: rgba(0, 0, 0, 0.09);
 $gray1: #C5BABA;
+$gray2Alpha: rgba(178, 178, 178, 0.26);
 
 $pinkwhite: #F8EDFF;
 $pink1: #FF00A8;
