--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@
 @use './components/heading-text.scss';
 // @import './components/track.scss';
 @use './structure/footer.scss';
+@use './structure/header.scss'; //index for header components
 // @import './components/logo.scss';
 // @import './components/hamburger.scss';
 // @import './components/main-nav.scss';
