--- a/src/sass/structure/search.scss
+++ b/src/sass/structure/search.scss
@@ -3,9 +3,12 @@
 .search {
   background-color: variables.$gray2Alpha;
   display: inline-block;
-  width: 100%;
+  width: 109%;
   height: 3.8rem;
   color: #FFF;
-  font-size: 0.875rem;
-  font-family: Poppins;
+  font-size: 1.4rem;
+  font-family: Poppins, sans-serif;
+  border-radius: 2rem;
+  padding: 0.7rem 3.5rem;
+  margin: 0 -1.4rem;
 }
