filtering of terms working when activating

--- a/src/blocks/filtering-tracks/filtering-tracks.scss
+++ b/src/blocks/filtering-tracks/filtering-tracks.scss
@@ -8,6 +8,10 @@
           font-weight: 600;
           font-size: 1.6rem;
         }
+
+        &.hidden {
+          display: none;
+        }
       }
     }
   }
