--- a/src/sass/structure/search.scss
+++ b/src/sass/structure/search.scss
@@ -1,7 +1,7 @@
 @use '../variables' as variables;
 
 .search {
-  background-color: variables.$gray2Alpha;
+  background-color: variables.$gray2Alpha1;
   display: inline-block;
   width: 109%;
   height: 3.8rem;
