--- a/src/blocks/filtering-tracks/filtering-tracks.scss
+++ b/src/blocks/filtering-tracks/filtering-tracks.scss
@@ -1,3 +1,5 @@
+@use '../../sass/variables' as variables;
+
 .filtering-tracks {
   &__terms-widget {
     margin-bottom: 2rem;
@@ -12,6 +14,30 @@
         &.hidden {
           display: none;
         }
+      }
+    }
+  }
+
+  &__tracks {
+    position: relative;
+
+    .filtering-tracks__loading-list {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: variables.$purple3Alpha1;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+      z-index: 1;
+
+      &.active {
+        display: inline-block;
+        opacity: 1;
+        visibility: visible;
+        transition: all 0.3s ease;
       }
     }
   }
