--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,17 +1,20 @@
 $white: #ffffff;
 $whiteAlpha1: rgba(255, 255, 255, 0.07);
+$whiteAlpha2: rgba(255, 255, 255, 0.5);
 $black: #000000;
 $blackAlpha1: rgba(0, 0, 0, 0.01);
 $blackAlpha2: rgba(0, 0, 0, 0.05);
 $blackAlpha3: rgba(0, 0, 0, 0.09);
 $gray1: #C5BABA;
-$gray2Alpha: rgba(178, 178, 178, 0.26);
+$gray2Alpha1: rgba(178, 178, 178, 0.26);
+
 
 $pinkwhite: #F8EDFF;
 $pink1: #FF00A8;
 $pink2: rgba(255, 0, 168, 0.5);
 $purple1: #BD00FF;
 $purple2: rgba(189, 0, 255, 0.5);
+$purple3Alpha1: rgba(54, 11, 44, 0.7);
 
 $breakpoints: (
   "xs": 0,
