some styling in header

--- a/src/sass/structure/search.scss
+++ b/src/sass/structure/search.scss
@@ -3,12 +3,12 @@
 .search {
   background-color: variables.$gray2Alpha1;
   display: inline-block;
-  width: 109%;
+  width: 100%;
   height: 3.8rem;
   color: #FFF;
   font-size: 1.4rem;
   font-family: Poppins, sans-serif;
   border-radius: 2rem;
-  padding: 0.7rem 3.5rem;
-  margin: 0 -1.4rem;
+  padding: 0.7rem 3.2rem;
+  margin: 0 0 0 3.1rem;
 }
