--- a/src/sass/structure/hamburger.scss
+++ b/src/sass/structure/hamburger.scss
@@ -1,1 +1,37 @@
-.hamburger {}
+@use '../../sass/variables' as variables;
+
+.hamburger {
+  position: relative;
+  width: 3rem;
+  height: 3rem;
+  background-color: rgba(255, 255, 255, 0.432);
+
+  span {
+    position: absolute;
+    background: variables.$white;
+    display: inline-block;
+    width: 1.7rem;
+    height: 0.3rem;
+    border-radius: 2rem;
+
+    &:nth-of-type(1) {
+      top: 0;
+      left: 0;
+    }
+
+    &:nth-of-type(2) {
+      top: 1.4rem;
+      left: 0;
+    }
+
+    &:nth-of-type(3) {
+      top: 1.4rem;
+      left: 0;
+    }
+
+    &:nth-of-type(4) {
+      top: 100%;
+      left: 0;
+    }
+  }
+}
