--- a/src/sass/structure/main-nav.scss
+++ b/src/sass/structure/main-nav.scss
@@ -1,4 +1,8 @@
 .main-nav {
   margin: 0 -3rem;
   padding: 1.7rem 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+  justify-content: space-between;
 }
