--- a/src/sass/structure/search.scss
+++ b/src/sass/structure/search.scss
@@ -10,5 +10,5 @@
   font-family: Poppins, sans-serif;
   border-radius: 2rem;
   padding: 0.7rem 3.2rem;
-  margin: 0 0 0 3.1rem;
+  margin: 0 0 0 0;
 }
