mega menu desktop almost ready

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,3 +8,4 @@
 @use './structure/header.scss'; //index for header components
 @use './structure/logo.scss';
 @use './structure/hamburger.scss';
+@use './structure/main.scss';
