--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,7 @@
 $white: #ffffff;
 $whiteAlpha1: rgba(255, 255, 255, 0.07);
 $whiteAlpha2: rgba(255, 255, 255, 0.5);
+$whiteAlpha3: rgba(255, 255, 255, 0.1);
 $black: #000000;
 $blackAlpha1: rgba(0, 0, 0, 0.01);
 $blackAlpha2: rgba(0, 0, 0, 0.05);
