--- a/src/sass/structure/main-menu.scss
+++ b/src/sass/structure/main-menu.scss
@@ -1,3 +1,58 @@
+@use '../variables' as variables;
+
 .main-menu {
   width: 100%;
+  padding-top: 0.9rem;
+  overflow: hidden;
+
+  &__menu {
+    &-item {
+      color: variables.$white;
+      font-size: 1.6rem;
+      font-family: Poppins, sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      padding: 1.35rem 0;
+      cursor: pointer;
+
+      &.has-children {
+        .main-menu__menu-link {
+          position: relative;
+
+          &:after {
+            background-image: url('data:image/svg+xml,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g><g><path d="M5 9.5L11.293 15.5" stroke="white" stroke-width="2" stroke-linecap="round"/><path d="M18.293 9.5L11.293 15.5" stroke="white" stroke-width="2" stroke-linecap="round"/></g></g></svg>');
+            background-repeat: no-repeat;
+            content: '';
+            display: inline-block;
+            position: absolute;
+            right: -2.6rem;
+            width: 2.4rem;
+            height: 2.4rem;
+            transition: all 0.3s ease;
+            transform: rotateZ(0);
+            transform-origin: center;
+          }
+        }
+
+        &.active {
+          .main-menu__menu-link {
+            &:after {
+              transform: rotateZ(180deg);
+              transition: all 0.3s ease;
+            }
+          }
+
+          .mega-menu {
+            opacity: 1;
+            visibility: visible;
+            transition: all 0.3s ease;
+            max-height: 9999px;
+          }
+        }
+      }
+    }
+
+
+  }
 }
