--- a/src/blocks/hero-section/hero-section.scss
+++ b/src/blocks/hero-section/hero-section.scss
@@ -1,1 +1,17 @@
-.hero-section {}
+.hero-section {
+  .container {
+    .row {
+      &--wide-narrow {
+        .col {
+          &:nth-of-type(1) {
+            width: 100%;
+          }
+
+          &:nth-of-type(2) {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
