--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,10 +12,10 @@ $gray2Alpha1: rgba(178, 178, 178, 0.26);
 
 $pinkwhite: #F8EDFF;
 $pink1: #FF00A8;
-$pink2: rgba(255, 0, 168, 0.5);
+$pink1Alpha1: rgba(255, 0, 168, 0.5);
 $purple1: #BD00FF;
-$purple2: rgba(189, 0, 255, 0.5);
-$purple3Alpha1: rgba(54, 11, 44, 0.7);
+$purple1Alpha1: rgba(189, 0, 255, 0.5);
+$purple2Alpha1: rgba(54, 11, 44, 0.7);
 
 $breakpoints: (
   "xs": 0,
