--- a/src/sass/components/track.scss
+++ b/src/sass/components/track.scss
@@ -131,7 +131,7 @@
         }
 
         .track-box__pointer {
-          background: linear-gradient(90.75deg, variables.$pink2 2.97%, variables.$purple2 55.95%);
+          background: linear-gradient(90.75deg, variables.$pink1Alpha1 2.97%, variables.$purple1Alpha1 55.95%);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           position: absolute;
           top: 0;
