--- a/src/sass/structure/mega-menu.scss
+++ b/src/sass/structure/mega-menu.scss
@@ -3,4 +3,12 @@
   visibility: hidden;
   transition: all 0.3s ease;
   max-height: 0;
+
+  &__column {
+    &-narrow {}
+
+    &-wide {
+      display: none;
+    }
+  }
 }
