--- a/src/sass/structure/main-menu.scss
+++ b/src/sass/structure/main-menu.scss
@@ -14,7 +14,10 @@
       font-weight: 400;
       line-height: normal;
       padding: 1.35rem 0;
-      cursor: pointer;
+
+      .main-menu__menu-link {
+        cursor: pointer;
+      }
 
       &.has-children {
         .main-menu__menu-link {
@@ -32,6 +35,7 @@
             transition: all 0.3s ease;
             transform: rotateZ(0);
             transform-origin: center;
+            cursor: pointer;
           }
         }
 
@@ -57,6 +61,11 @@
 
               &-name {
                 margin-top: 2.2rem;
+
+                &:after {
+                  transition: all 0.3s ease;
+                  transform: rotateZ(180deg);
+                }
               }
             }
           }
@@ -85,6 +94,21 @@
       display: inline-block;
       margin-top: 0;
       transition: all 0.5s ease;
+      position: relative;
+
+      &:after {
+        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M5 9.5L11.293 15.5" stroke="%23BD00FF" stroke-width="2" stroke-linecap="round"/><path d="M18.293 9.5L11.293 15.5" stroke="%23BD00FF" stroke-width="2" stroke-linecap="round"/></svg>');
+        background-repeat: no-repeat;
+        content: '';
+        display: inline-block;
+        position: absolute;
+        right: -2.6rem;
+        width: 2.4rem;
+        height: 2.4rem;
+        transition: all 0.3s ease;
+        transform: rotateZ(0);
+        transform-origin: center;
+      }
     }
   }
 }
