more menu animations

--- a/src/sass/structure/main-menu.scss
+++ b/src/sass/structure/main-menu.scss
@@ -51,21 +51,29 @@
             opacity: 1;
             visibility: visible;
             transition: all 0.3s ease;
-            max-height: 9999px;
+            max-height: 999px;
             padding-top: 0.6rem;
 
             .main-menu__widget {
-              height: 5.2rem;
-              transition: all 0.4s ease;
+              max-height: 5.2rem;
+              transition: all 0.3s ease;
               transition-delay: 0.1s;
+
+              &.active {
+                max-height: 999px;
+                transition: all 0.6s ease;
+
+                .main-menu__widget-name {
+
+                  &:after {
+                    transition: all 0.3s ease;
+                    transform: rotateZ(180deg);
+                  }
+                }
+              }
 
               &-name {
                 margin-top: 2.2rem;
-
-                &:after {
-                  transition: all 0.3s ease;
-                  transform: rotateZ(180deg);
-                }
               }
             }
           }
@@ -78,7 +86,7 @@
     padding: 0;
     overflow: hidden;
     transition: all 0.3s ease;
-    height: 0;
+    max-height: 0;
 
     &-name {
       text-transform: uppercase;
@@ -87,7 +95,6 @@
       font-style: normal;
       font-weight: 900;
       line-height: normal;
-
       background: linear-gradient(90deg, variables.$pink1 0%, variables.$purple1 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -95,6 +102,7 @@
       margin-top: 0;
       transition: all 0.5s ease;
       position: relative;
+      cursor: pointer;
 
       &:after {
         background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"><path d="M5 9.5L11.293 15.5" stroke="%23BD00FF" stroke-width="2" stroke-linecap="round"/><path d="M18.293 9.5L11.293 15.5" stroke="%23BD00FF" stroke-width="2" stroke-linecap="round"/></svg>');
